fix: footer alignment

--- a/src/footer/footer.component.css
+++ b/src/footer/footer.component.css
@@ -1,3 +1,5 @@
 .footer {
-  padding: 0;
+  padding: 5px;
+  position: absolute;
+  bottom: 0;
 }
